[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Bullet.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemy/Bullet/bullet.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 2.23607

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.896774, 1 )
colors = PoolColorArray( 0.969184, 0.197713, 0.0227153, 1, 0.843026, 0.906684, 0.0637512, 1, 0.926545, 1, 0.0273438, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.97191, -0.649414 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.31
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 5, 10, 5 )
spread = 68.17
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 5.7
radial_accel = 5.0
radial_accel_curve = SubResource( 6 )
color = Color( 0.8, 0.819608, 0.211765, 1 )
color_ramp = SubResource( 4 )

[node name="Bullet" type="KinematicBody2D"]
z_index = 20
collision_mask = 256
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=["Bullet"]]
collision_layer = 2
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, -4 )
scale = Vector2( 1.5, 1.5 )
amount = 25
process_material = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
